Add gatekeeper implementation for textfields

--- a/web/data/configurations/langs/fr/interface.xml
+++ b/web/data/configurations/langs/fr/interface.xml
@@ -5,6 +5,7 @@
     
     <group id="violations">
         <string id="textfield.mandatory">Le champ doit contenir au moins $length$ caractère(s).</string>
+        <string id="textfield.server">Le serveur a refusé la valeur saisie.</string>
     </group>
     
 </configuration>
